fixup! WIP: adapt verseblocks to dark mode

--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -70,7 +70,7 @@
             }
         }
         body#{$class}#documentation #main div.verseblock pre.content {
-            background-color: #bb9a60;
+            background-color: #b7a78a;
         }
 }
 
